[gd_scene load_steps=4 format=3 uid="uid://dp3ydgpuoroxl"]

[ext_resource type="Script" path="res://pelota.gd" id="1_h5m4g"]
[ext_resource type="Texture2D" uid="uid://d0sg4oqs8s4df" path="res://img/pelota2.png" id="2_xty1g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gcfrp"]
radius = 70.0

[node name="Pelota" type="Area2D"]
position = Vector2(385, 368)
scale = Vector2(0.3, 0.3)
script = ExtResource("1_h5m4g")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gcfrp")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_xty1g")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="LabelDt" type="Label" parent="."]
offset_left = 110.0
offset_top = 43.3333
offset_right = 150.0
offset_bottom = 66.3333
theme_override_font_sizes/font_size = 48

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
